Revert "Fix duplicate registration of overridden @EventHandler methods"
This reverts commit 9f01fed6